--- a/public/templates/tab-content/knowledge.html
+++ b/public/templates/tab-content/knowledge.html
@@ -24,6 +24,7 @@
 	<h4>Little skills and knowledge</h4>
 	<ul class="text-muted">
 		<li>C# / ASP.NET</li>
+		<li>Unit testing</li>
 		<li>Singleton</li>
 		<li>Dependency injection</li>
 		<li>Python</li>
