--- a/public/templates/tab-content/knowledge.html
+++ b/public/templates/tab-content/knowledge.html
@@ -1,5 +1,6 @@
 <div class="col-sm-4 good-knowledge knowledge-content">
 	<h4>Serious skills and knowledge</h4>
+	<p>I've failed and success projects using these technologies. A lot of experince and I know the bad and the good things related with them.</p>
 	<ul class="text-success">
 		<li>JavaScript and jQuery</li>
 		<li>HTTP / AJAX / Async Programming</li>
@@ -9,19 +10,22 @@
 </div>
 <div class="col-sm-4 normal-knowledge knowledge-content">
 	<h4>Skills and knowledge</h4>
+	<p>I've practice and experince. I know the way they work, how to use them correctly, but I have to learn a bit more.</p>
 	<ul class="text-primary">
-		<li>AngularJS / Node.js / Template engines</li>
+		<li>AngularJS / Node.js (express) / Template engines</li>
 		<li>Laravel 4 / MySQL / MSSQL</li>
 		<li>OOP / JavaScript OOP</li>
 		<li>Promises</li>
 		<li>Prototype Chain</li>
-		<li>RESTful APIs / CRUD</li>
+		<li>RESTful API / CRUD</li>
 		<li>Using and understanding MVC</li>
 		<li>Photoshop (using masks, layers, paths, FX, etc..)</li>
+		<li>Twitter Bootstrap</li>
 	</ul>
 </div>
 <div class="col-sm-4 little-knowledge knowledge-content">
 	<h4>Little skills and knowledge</h4>
+	<p>I've used these technologies for a while. I know the basics.</p>
 	<ul class="text-muted">
 		<li>C# / ASP.NET</li>
 		<li>Unit testing</li>
