--- a/public/templates/tab-content/work.html
+++ b/public/templates/tab-content/work.html
@@ -1,3 +1,49 @@
-<div class="col-sm-8">
+<div class="col-sm-10 col-sm-offset-1 row">
+	<div class="col-xs-12 text-center pad-top-40">
+		<h3>Here are some of my published projects.</h3>
+	</div>
+	<div class="col-xs-12 row work-item-row">
+		<div class="col-sm-4 col-xs-12 link-wrapper">
+			<a href="http://linkedhouse-ifch0o1webapps.rhcloud.com" target="_blank" class="link-image row">
+				<img src="images/linkedhouse-prew.png" class="img-responsive col-xs-12">
+				<span class="link-image-text text-danger">The loading time may be slow.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="Because of the limitations on free account, the hosting service provider sometimes may stop the server which runs this application, so you may need to wait for starting the services. (~40 sec)"></span></span>
+			</a>
+		</div>
+		<div class="col-sm-8 col-xs-12 resume-wrapper">
+			<h4>Linked House</h4>
+			<p>
+				It's online storage for favorite links (bookmarks). Currently not supporting mobile browsers / devices, but I plan to integrate it with them.
+			</p>
+			<p>
+				The development of this application is started long time ago and the arhitecture is not very well. It contains good code and bad code. Since client-side including only jQuery and the project isn't too small - it's not so easy for a single developer to make serious changes.
+			</p>
+			<p>
+				Actually this is the fully rewritten project from scratch. The first project had almost the same idea, but I started writing it when my skills were on initial phase.
+			</p>
+		</div>	
+	</div>
 	
+	<div class="col-xs-12 row work-item-row">
+		<div class="col-sm-4 col-xs-12 link-wrapper">
+			<a href="http://wcalc-ifch0o1webapps.rhcloud.com" target="_blank" class="link-image row">
+				<img src="images/wcalc-prew.png" class="img-responsive col-xs-12">
+				<span class="link-image-text text-danger">The loading time may be slow.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="Because of the limitations on free account, the hosting service provider sometimes may stop the server which runs this application, so you may need to wait for starting the services. (~40 sec)"></span></span>
+			</a>
+		</div>
+		<div class="col-sm-8 col-xs-12 resume-wrapper">
+			<h4>Writing speed calculator</h4>
+			<p>
+				It's a little application which was made for less than 4 days. It just calculates typing speed and show results like: characters and words per minute and score. It uses jQuery and it's most client-side oriented. Results are not saved, but in the future I will made some server-side storage for the best results.
+			</p>
+		</div>	
+	</div>
+
+	<div class="col-xs-12 row work-item-row profiles-wrapper">
+		<a href="http://stackoverflow.com/users/2367041/ifch0o1" target="_blank" class="link-image my-profile-icon-link">
+			<img class="" src="images/dev-logos/stackoverflow-1.png">
+		</a>
+		<a href="https://github.com/ifch0o1" target="_blank" class="link-image my-profile-icon-link">
+			<img class="" src="images/dev-logos/github-1.png">
+		</a>
+	</div>
 </div>
