Added motivation page content.

--- a/public/templates/tab-content/work.html
+++ b/public/templates/tab-content/work.html
@@ -1,6 +1,6 @@
 <div class="col-sm-10 col-sm-offset-1 row">
 	<div class="col-xs-12 text-center pad-top-40">
-		<h3>Here are some of my published projects.</h3>
+		<h3>Here are some of my projects.</h3>
 	</div>
 	<div class="col-xs-12 row work-item-row">
 		<div class="col-sm-4 col-xs-12 link-wrapper">
