--- a/public/templates/tab-content/work.html
+++ b/public/templates/tab-content/work.html
@@ -5,8 +5,8 @@
 	<div class="col-xs-12 row work-item-row">
 		<div class="col-sm-4 col-xs-12 link-wrapper">
 			<a href="http://linkedhouse-ifch0o1webapps.rhcloud.com" target="_blank" class="link-image row">
-				<img src="images/linkedhouse-prew.png" class="img-responsive col-xs-12">
-				<span class="link-image-text text-danger">The loading time may be slow.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="Because of the limitations for free accounts, the hosting service provider sometimes may stop the server which runs this application, so you may need to wait for starting the services. (~40 sec)"></span></span>
+				<img src="images/linkedhouse-prew.png" class="img-responsive col-xs-12 work-link-img">
+				<span class="link-image-text text-danger-light">The loading time may be slow.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="Because of the limitations for free accounts, the hosting service provider sometimes may stop the server which runs this application, so you may need to wait for starting the services. (~40 sec)"></span></span>
 			</a>
 		</div>
 		<div class="col-sm-8 col-xs-12 resume-wrapper">
@@ -26,8 +26,8 @@
 	<div class="col-xs-12 row work-item-row">
 		<div class="col-sm-4 col-xs-12 link-wrapper">
 			<a href="http://wcalc-ifch0o1webapps.rhcloud.com" target="_blank" class="link-image row">
-				<img src="images/wcalc-prew.png" class="img-responsive col-xs-12">
-				<span class="link-image-text text-danger">The loading time may be slow.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="Because of the limitations for free accounts, the hosting service provider sometimes may stop the server which runs this application, so you may need to wait for starting the services. (~40 sec)"></span></span>
+				<img src="images/wcalc-prew.png" class="img-responsive col-xs-12 work-link-img">
+				<span class="link-image-text text-danger-light">The loading time may be slow.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="Because of the limitations for free accounts, the hosting service provider sometimes may stop the server which runs this application, so you may need to wait for starting the services. (~40 sec)"></span></span>
 			</a>
 		</div>
 		<div class="col-sm-8 col-xs-12 resume-wrapper">
