--- a/public/templates/tab-content/knowledge.html
+++ b/public/templates/tab-content/knowledge.html
@@ -1,7 +1,7 @@
 <div class="col-sm-4 good-knowledge knowledge-content">
 	<h4>Serious skills and knowledge</h4>
 	<p>I've failed and success projects using these technologies. A lot of experince and I know the bad and the good things related with them.</p>
-	<ul class="text-success">
+	<ul class="text-success-light">
 		<li>JavaScript and jQuery</li>
 		<li>HTTP / AJAX / Async Programming</li>
 		<li>PHP</li>
@@ -11,7 +11,7 @@
 <div class="col-sm-4 normal-knowledge knowledge-content">
 	<h4>Skills and knowledge</h4>
 	<p>I've practice and experince. I know the way they work, how to use them correctly, but I have to learn a bit more.</p>
-	<ul class="text-primary">
+	<ul class="text-primary-light">
 		<li>AngularJS / Node.js (express) / Template engines</li>
 		<li>Laravel 4 / MySQL / MSSQL</li>
 		<li>OOP / JavaScript OOP</li>
@@ -26,7 +26,7 @@
 <div class="col-sm-4 little-knowledge knowledge-content">
 	<h4>Little skills and knowledge</h4>
 	<p>I've used these technologies for a while. I know the basics.</p>
-	<ul class="text-muted">
+	<ul class="text-muted-light">
 		<li>C# / ASP.NET</li>
 		<li>Unit testing</li>
 		<li>Singleton</li>
