Contact page compelted, little design fixes

--- a/public/templates/tab-content/motivation.html
+++ b/public/templates/tab-content/motivation.html
@@ -3,10 +3,10 @@
 		Motivation
 	</h3>
 	<p>
-		My motivation is focused on web development and mobile development. I want to work / make <strong>cross-platform</strong> flexible applications / systems. Since now the JavaScript is so common, it helps a lot.
+		My motivation is focused in web development and mobile development. I want to work / make <strong>cross-platform</strong> flexible applications / systems. Since now the JavaScript is so common, it helps a lot.
 	</p>
 	<p>
-		I'm highly interested on learning new JavaScript frameworks/libraries. Also I plan to start learning <strong>Java</strong> and mobile development. <strong>Java</strong> is old technology and it has big community, since I know the basics of <strong>C#</strong> and <strong>OOP</strong> it will not be so difficult.
+		I'm highly interested in learning new JavaScript frameworks/libraries. Also I plan to start learning <strong>Java</strong> and mobile development. <strong>Java</strong> is old technology and it has big community, since I know the basics of <strong>C#</strong> and <strong>OOP</strong> it will not be so difficult.
 	</p>
 	<p>
 		I like to write server-side logic too. I'm familiar with some secirity issues as <strong>SQL Injection</strong> and <strong>Cross-site scripting (XSS)</strong>. <br/>
