--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,9 @@
 body {
   background-color: #fff;
 }
+a:hover {
+    text-decoration: none;
+}
 html, body { /* Disable horizontal scrollbar */
     max-width: 100%;
     overflow-x: hidden;
@@ -77,6 +80,9 @@ html, body { /* Disable horizontal scrollbar */
 	text-align: center;
 	margin-top: 40px;
 }
+.contact-row {
+  margin-top: 30px;
+}
 
 .my-profile-icon-link {
 	margin: 0 30px;
@@ -116,13 +122,15 @@ html, body { /* Disable horizontal scrollbar */
 	color: #FFE4C4;
 	background-color: #444349;
 	border-color: #3B3B3B;
+    border-bottom: none;
 }
 
 .generic-tab.active > span.btn {
-	text-shadow: yellow 0px 0px 17px;
+	text-shadow: rgba(255, 255, 0, 0.5) 0px 0px 20px;
 	color: #FFA200;
 	background-color: #3E3D44;
 	border-color: #363636;
+    border-bottom: 1px solid #DA8300;
 }
 
 #section {
@@ -132,7 +140,12 @@ html, body { /* Disable horizontal scrollbar */
 	margin-top: 40px;
 	padding: 15px;
 }
-
+#section a {
+    color: #28CBFF;
+}
+#section a:hover {
+    color: #00C1FF;
+}
 .tab-content {
 	padding-bottom: 20px;
 	background-color: rgba(255, 255, 255, 0.1);
@@ -153,7 +166,7 @@ html, body { /* Disable horizontal scrollbar */
 #footer {
 	background-color: #424242;
 	color: #D1D1D1;
-	padding-top: 40px;
+	padding-top: 20px;
 	margin-top: 0px;
 	background-color: #444349;
 	border-top: 1px solid #525252;
