Added symlink to root folder (for gh-pages), typo fixes.

--- a/public/templates/tab-content/contact.html
+++ b/public/templates/tab-content/contact.html
@@ -6,7 +6,7 @@
             </a>
         </div>
         <div class="col-xs-8">
-            <p>For faster response, You can contact me at: <a href="mailto:ifch0o69@gmail.com" target="_top">ifch0o69@gmail.com</a></p>
+            <p>For quick response - contact me at: <a href="mailto:ifch0o69@gmail.com" target="_top">ifch0o69@gmail.com</a></p>
         </div>
     </div>
     <div class="row contact-row vertical-align">
@@ -17,7 +17,7 @@
             
         </div>
         <div class="col-xs-8">
-            <p>You can found me at google plus.</p>
+            <p>You can find me at Google+.</p>
         </div>
     </div>
     <div class="row contact-row vertical-align">
@@ -27,7 +27,7 @@
             </a>
         </div>
         <div class="col-xs-8">
-            <p>I'm not using Facebook often. I doesn't really like it.</p>
+            <p>I don't use Facebook often. I don't really like it.</p>
         </div>
     </div>
     <div class="row contact-row vertical-align">
@@ -37,7 +37,7 @@
             </a>
         </div>
         <div class="col-xs-8">
-            <p>I'm using Twitter from time to time.</p>
+            <p>I use Twitter from time to time.</p>
         </div>
     </div>
 </div>
