added Git skill

--- a/templates/tab-content/knowledge.html
+++ b/templates/tab-content/knowledge.html
@@ -19,6 +19,7 @@
 		<li>Prototype Chain</li>
 		<li>RESTful API / CRUD</li>
 		<li>Using and understanding MVC</li>
+		<li>Git</li>
 		<li>Photoshop (using masks, layers, paths, FX, etc..)</li>
 		<li>Twitter Bootstrap</li>
 	</ul>
