--- a/templates/tab-content/motivation.html
+++ b/templates/tab-content/motivation.html
@@ -13,12 +13,9 @@
 		I'm not best in databases, but I'm highly motivated and less experienced in developing server-side services such as <strong>RESTful APIs</strong> and <strong>CRUD operations</strong>.
 	</p>
 	<p>
-		I am not limited to these things! I am interested in much more technologies and programming languages. And not only... I follow general IT issues and what's happening with the industry at all.
+		I am not limited to these things! I am interested in much more technologies and programming languages.
 	</p>
 	<p>
 		I know it will take long time, but one day I will become a web engineer!
-	</p>
-	<p>
-		Currently my published projects are too few. I have more suspended projects because of different reasons. They contains a lot of <strong>AngularJS / Node.js</strong> and <strong>MVC.</strong> I love Angular because it helps to develop rich applications easy.
 	</p>
 </div>
