--- a/templates/tab-content/contact.html
+++ b/templates/tab-content/contact.html
@@ -37,7 +37,7 @@
             </a>
         </div>
         <div class="col-xs-8">
-            <p>I use Twitter from time to time.</p>
+            <p>I am use Twitter from time to time.</p>
         </div>
     </div>
 </div>
