--- a/templates/tab-content/motivation.html
+++ b/templates/tab-content/motivation.html
@@ -9,7 +9,7 @@
 		I'm highly interested in learning new JavaScript frameworks/libraries. Also I plan to start learning <strong>Java</strong> and mobile development. <strong>Java</strong> is old technology and it has big community, since I know the basics of <strong>C#</strong> and <strong>OOP</strong> it will not be so difficult.
 	</p>
 	<p>
-		I like to write server-side logic too. I'm familiar with some secirity issues as <strong>SQL Injection</strong> and <strong>Cross-site scripting (XSS)</strong>. <br/>
+		I like to write server-side logic too. I'm familiar with some security issues as <strong>SQL Injection</strong> and <strong>Cross-site scripting (XSS)</strong>. <br/>
 		I'm not best in databases, but I'm highly motivated and less experienced in developing server-side services such as <strong>RESTful APIs</strong> and <strong>CRUD operations</strong>.
 	</p>
 	<p>
