updated knowledge tab template

--- a/templates/tab-content/knowledge.html
+++ b/templates/tab-content/knowledge.html
@@ -5,6 +5,7 @@
 		<li>JavaScript and jQuery</li>
 		<li>HTTP / AJAX / Async Programming</li>
 		<li>PHP</li>
+		<li>RESTful</li>
 		<li>HTML5 / CSS3</li>
 	</ul>
 </div>
@@ -13,11 +14,11 @@
 	<p>I've practice and experince. I know the way they work, how to use them correctly, but I have to learn a bit more.</p>
 	<ul class="text-primary-light">
 		<li>AngularJS / Node.js (express) / Template engines</li>
-		<li>Laravel 4 / MySQL / MSSQL</li>
+		<li>Laravel 4-5 / MySQL / MSSQL</li>
 		<li>OOP / JavaScript OOP</li>
 		<li>Promises</li>
 		<li>Prototype Chain</li>
-		<li>RESTful API / CRUD</li>
+		<li>ORM / CRUD</li>
 		<li>Using and understanding MVC</li>
 		<li>Git</li>
 		<li>Photoshop (using masks, layers, paths, FX, etc..)</li>
@@ -28,11 +29,7 @@
 	<h4>Little skills and knowledge</h4>
 	<p>I've used these technologies for a while. I know the basics.</p>
 	<ul class="text-muted-light">
-		<li>C# / ASP.NET</li>
+		<li>C# / .NET</li>
 		<li>Unit testing</li>
-		<li>Singleton</li>
-		<li>Dependency injection</li>
-		<li>Python</li>
-		<li>Linux administration</li>
 	</ul>
 </div>
