--- a/templates/tab-content/knowledge.html
+++ b/templates/tab-content/knowledge.html
@@ -15,9 +15,7 @@
 	<ul class="text-primary-light">
 		<li>AngularJS / Node.js (express) / Template engines</li>
 		<li>Laravel 4-5 / MySQL / MSSQL</li>
-		<li>OOP / JavaScript OOP</li>
-		<li>Promises</li>
-		<li>Prototype Chain</li>
+		<li>OOP / JavaScript OOP / Prototype Chain</li>
 		<li>ORM / CRUD</li>
 		<li>Using and understanding MVC</li>
 		<li>Git</li>
