updated email in contact tab

--- a/templates/tab-content/contact.html
+++ b/templates/tab-content/contact.html
@@ -6,7 +6,7 @@
             </a>
         </div>
         <div class="col-xs-8">
-            <p>For quick response - contact me at: <a href="mailto:ifch0o69@gmail.com" target="_top">ifch0o69@gmail.com</a></p>
+            <p>For quick response - contact me at: <a href="mailto:ivo.h.tanev@gmail.com" target="_top">ivo.h.tanev@gmail.com</a></p>
         </div>
     </div>
     <div class="row contact-row vertical-align">
