--- a/templates/tab-content/knowledge.html
+++ b/templates/tab-content/knowledge.html
@@ -5,7 +5,6 @@
 		<li>JavaScript and jQuery</li>
 		<li>HTTP / AJAX / Async Programming</li>
 		<li>PHP</li>
-		<li>RESTful</li>
 		<li>HTML5 / CSS3</li>
 	</ul>
 </div>
@@ -14,9 +13,9 @@
 	<p>I've practice and experince. I know the way they work, how to use them correctly, but I have to learn a bit more.</p>
 	<ul class="text-primary-light">
 		<li>AngularJS / Node.js (express) / Template engines</li>
-		<li>Laravel 4-5 / MySQL / MSSQL</li>
+		<li>Laravel 4-5 / MySQL</li>
 		<li>OOP / JavaScript OOP / Prototype Chain</li>
-		<li>ORM / CRUD</li>
+		<li>ORM / CRUD / RESTful</li>
 		<li>Using and understanding MVC</li>
 		<li>Git</li>
 		<li>Photoshop (using masks, layers, paths, FX, etc..)</li>
@@ -27,7 +26,7 @@
 	<h4>Little skills and knowledge</h4>
 	<p>I've used these technologies for a while. I know the basics.</p>
 	<ul class="text-muted-light">
-		<li>C# / .NET</li>
+		<li>C#</li>
 		<li>Unit testing</li>
 	</ul>
 </div>
