--- a/templates/tab-content/work.html
+++ b/templates/tab-content/work.html
@@ -1,6 +1,6 @@
 <div class="col-sm-10 col-sm-offset-1 row">
 	<div class="col-xs-12 text-center pad-top-40">
-		<h3>Here are some of my projects.</h3>
+		<h4>Here is some of my work</h4>
 	</div>
 	<div class="col-xs-12 row work-item-row">
 		<div class="col-sm-4 col-xs-12 link-wrapper">
@@ -34,6 +34,20 @@
 			<h4>Writing speed calculator</h4>
 			<p>
 				It's a little application which was made for less than 4 days. It just calculates typing speed and show results such as - characters / words per minute and scores. It uses jQuery and it's most client-side oriented. Results are not saved, but in the future I will made some server-side storage for the best results.
+			</p>
+		</div>	
+	</div>
+	<div class="col-xs-12 row work-item-row">
+		<div class="col-sm-4 col-xs-12 link-wrapper">
+			<a href="http://zexplorer.tk" target="_blank" class="link-image row">
+				<img src="images/zexplorer-prew.png" class="img-responsive col-xs-12 work-link-img">
+				<span class="link-image-text text-danger-light">Uptime not guaranteed.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="This web application is hosted on my personal PC. Uptime is not guaranteed"></span></span>
+			</a>
+		</div>
+		<div class="col-sm-8 col-xs-12 resume-wrapper">
+			<h4>Zexplorer</h4>
+			<p>
+				Zamunda torrent explorer web application optimized for web devices. While "Reverse engineering" zamunda.net I have created some authentication services and HTML parsers to provide main services. This application is alpha version yet.
 			</p>
 		</div>	
 	</div>
