updates and typo

--- a/templates/tab-content/work.html
+++ b/templates/tab-content/work.html
@@ -4,6 +4,22 @@
 	</div>
 	<div class="col-xs-12 row work-item-row">
 		<div class="col-sm-4 col-xs-12 link-wrapper">
+			<a href="http://zexplorer.tk" target="_blank" class="link-image row">
+				<img src="images/zexplorer-prew.png" class="img-responsive col-xs-12 work-link-img">
+				<span class="link-image-text text-danger-light">Uptime not guaranteed.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="This web application is hosted on my personal PC. Uptime is not guaranteed"></span></span>
+			</a>
+		</div>
+		<div class="col-sm-8 col-xs-12 resume-wrapper">
+			<h4>Zexplorer</h4>
+			<p>
+				Zamunda torrent explorer web application. Optimized for mobile devices. <br>
+				Since zamunda.net is quite PHP based, it provide already filled HTML templates. With the aid of jQuery and cheerio (jQuery core integrated for node.js), I extracted the needed data from the zamunda.net HTMLs to provide main services. <br>
+				This application is alpha version yet. I am currently working on it.
+			</p>
+		</div>	
+	</div>
+	<div class="col-xs-12 row work-item-row">
+		<div class="col-sm-4 col-xs-12 link-wrapper">
 			<a href="http://linkedhouse-ifch0o1webapps.rhcloud.com" target="_blank" class="link-image row">
 				<img src="images/linkedhouse-prew.png" class="img-responsive col-xs-12 work-link-img">
 				<span class="link-image-text text-danger-light">The loading time may be slow.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="Because of the limitations for free accounts, the hosting service provider sometimes may stop the server which runs this application, so you may need to wait for starting the services. (~40 sec)"></span></span>
@@ -12,10 +28,10 @@
 		<div class="col-sm-8 col-xs-12 resume-wrapper">
 			<h4>Linked House</h4>
 			<p>
-				It's online storage for favorite links (bookmarks). <strong>Currently not supporting mobile browsers / devices</strong>, but I plan to integrate it with them.
+				It's online storage for favorite links (bookmarks). <strong>Currently NOT supporting mobile browsers / devices</strong>, but I plan to integrate it with them.
 			</p>
 			<p>
-				The development of this application is started long time ago and the arhitecture is not very well. It contains good code and bad code. Since client-side including only jQuery and the project isn't too small - it's not so easy for a single developer to make serious changes.
+				The development of this application is started long time ago and the arhitecture is not very well. It contains both good and bad code. Since client-side including only jQuery and the project isn't too small - it's not so easy for a single developer to make serious changes.
 			</p>
 			<p>
 				Actually this is the fully rewritten project from scratch. The first project had almost the same idea, but it was started when my skills were on initial phase.
@@ -33,21 +49,7 @@
 		<div class="col-sm-8 col-xs-12 resume-wrapper">
 			<h4>Writing speed calculator</h4>
 			<p>
-				It's a little application which was made for less than 4 days. It just calculates typing speed and show results such as - characters / words per minute and scores. It uses jQuery and it's most client-side oriented. Results are not saved, but in the future I will made some server-side storage for the best results.
-			</p>
-		</div>	
-	</div>
-	<div class="col-xs-12 row work-item-row">
-		<div class="col-sm-4 col-xs-12 link-wrapper">
-			<a href="http://zexplorer.tk" target="_blank" class="link-image row">
-				<img src="images/zexplorer-prew.png" class="img-responsive col-xs-12 work-link-img">
-				<span class="link-image-text text-danger-light">Uptime not guaranteed.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="This web application is hosted on my personal PC. Uptime is not guaranteed"></span></span>
-			</a>
-		</div>
-		<div class="col-sm-8 col-xs-12 resume-wrapper">
-			<h4>Zexplorer</h4>
-			<p>
-				Zamunda torrent explorer web application optimized for web devices. While "Reverse engineering" zamunda.net I have created some authentication services and HTML parsers to provide main services. This application is alpha version yet.
+				It's a little application which was made for less than 4 days. It just calculates typing speed and show results such as - characters / words per minute and scores. It uses jQuery and it's most client-side oriented. Results are not saved.
 			</p>
 		</div>	
 	</div>
