--- a/templates/tab-content/work.html
+++ b/templates/tab-content/work.html
@@ -14,7 +14,12 @@
 			<p>
 				Zamunda torrent explorer web application. Optimized for mobile devices. <br>
 				Since zamunda.net is quite PHP based, it provide already filled HTML templates. With the aid of jQuery and cheerio (jQuery core integrated for node.js), I extracted the needed data from the zamunda.net HTMLs to provide main services. <br>
-				This application is alpha version yet. I am currently working on it.
+				This application is alpha version yet. I am currently working on it. <br><br>
+			</p>
+			<p>
+				Used technologies: <br>
+				Server: Node.js (0.10.x) + express 4 <br>
+				Client: AngularJS + Angular Material + jQuery(full version). <br>
 			</p>
 		</div>	
 	</div>
@@ -35,6 +40,11 @@
 			</p>
 			<p>
 				Actually this is the fully rewritten project from scratch. The first project had almost the same idea, but it was started when my skills were on initial phase.
+			</p>
+			<p>
+				Used technologies: <br>
+				Server: PHP + Laravel 4 <br>
+				Client: jQuery
 			</p>
 		</div>	
 	</div>
