--- a/templates/tab-content/work.html
+++ b/templates/tab-content/work.html
@@ -13,7 +13,7 @@
 			<h4>Zexplorer</h4>
 			<p>
 				Zamunda torrent explorer web application. Optimized for mobile devices. <br>
-				Since zamunda.net is quite PHP based, it provide already filled HTML templates. With the aid of jQuery and cheerio (jQuery core integrated for node.js), I extracted the needed data from the zamunda.net HTMLs to provide main services. <br>
+				Since zamunda.net is quite PHP based, it provide already filled HTML templates. With the aid of jQuery and cheerio (jQuery core integrated for node.js), I extracting the needed data from the zamunda.net HTMLs to provide main services. <br>
 				This application is alpha version yet. I am currently working on it. <br><br>
 			</p>
 			<p>
@@ -43,7 +43,7 @@
 			</p>
 			<p>
 				Used technologies: <br>
-				Server: PHP + Laravel 4 <br>
+				Server: PHP + Laravel 4 + MySQL <br>
 				Client: jQuery
 			</p>
 		</div>	
