Update texts and htmls

--- a/templates/tab-content/contact.html
+++ b/templates/tab-content/contact.html
@@ -27,7 +27,7 @@
             </a>
         </div>
         <div class="col-xs-8">
-            <p>I don't use Facebook often. I don't really like it.</p>
+            <p>Facebook - I don't really use it for work.</p>
         </div>
     </div>
     <div class="row contact-row vertical-align">
@@ -37,7 +37,7 @@
             </a>
         </div>
         <div class="col-xs-8">
-            <p>I am using Twitter from time to time.</p>
+            <p>Twitter</p>
         </div>
     </div>
 </div>
