--- a/templates/tab-content/work.html
+++ b/templates/tab-content/work.html
@@ -10,7 +10,7 @@
 			</a>
 		</div>
 		<div class="col-sm-8 col-xs-12 resume-wrapper">
-			<h4>Zexplorer</h4>
+			<h4>Zexplorer (It may be offline now)</h4>
 			<p>
 				Zamunda torrent explorer web application. Optimized for mobile devices. <br>
 				Since zamunda.net is quite PHP based, it provide already filled HTML templates. With the aid of jQuery and cheerio (jQuery core integrated for node.js), I extracting the needed data from the zamunda.net HTMLs to provide main services. <br>
