--- a/templates/tab-content/knowledge.html
+++ b/templates/tab-content/knowledge.html
@@ -2,24 +2,27 @@
 	<h4>Serious skills and knowledge</h4>
 	<p>I've failed and success projects using these technologies. A lot of experince and I know the bad and the good things related with them.</p>
 	<ul class="text-success-light">
-		<li>JavaScript and jQuery</li>
+		<li>JavaScript and jQuery (3+ years)</li>
+		<li>AngularJS 1</li>
 		<li>HTTP / AJAX / Async Programming</li>
-		<li>PHP</li>
 		<li>HTML5 / CSS3</li>
+		<li>Using and understanding MVC</li>
 	</ul>
 </div>
 <div class="col-sm-4 normal-knowledge knowledge-content">
 	<h4>Skills and knowledge</h4>
 	<p>I've practice and experince. I know the way they work, how to use them correctly, but I have to learn a bit more.</p>
 	<ul class="text-primary-light">
-		<li>AngularJS / Node.js (express) / Template engines</li>
+		<li>E2E Selenium tests / Xpath</li>
+		<li>Java (E2E Tests only)</li>
+		<li>PHP</li>
+		<li>Twitter Bootstrap</li>
+		<li>Node.js (express)</li>
 		<li>Laravel 4-5 / MySQL</li>
 		<li>OOP / JavaScript OOP / Prototype Chain</li>
 		<li>ORM / CRUD / RESTful</li>
-		<li>Using and understanding MVC</li>
 		<li>Git</li>
 		<li>Photoshop (using masks, layers, paths, FX, etc..)</li>
-		<li>Twitter Bootstrap</li>
 	</ul>
 </div>
 <div class="col-sm-4 little-knowledge knowledge-content">
