--- a/templates/tab-content/motivation.html
+++ b/templates/tab-content/motivation.html
@@ -6,14 +6,11 @@
 		My motivation is focused in web development and mobile development. I want to work / make <strong>cross-platform</strong> flexible applications / systems. Since now the JavaScript is so common, it helps a lot.
 	</p>
 	<p>
-		I'm highly interested in learning new JavaScript frameworks/libraries. Also I plan to start learning <strong>Java</strong> and mobile development. <strong>Java</strong> is old technology and it has big community, since I know the basics of <strong>C#</strong> and <strong>OOP</strong> it will not be so difficult.
+		I'm highly interested in learning new JavaScript frameworks/libraries, TypeScript, CSS preprocessors and Dart Language.
 	</p>
 	<p>
 		I like to write server-side logic too. I'm familiar with some security issues as <strong>SQL Injection</strong> and <strong>Cross-site scripting (XSS)</strong>. <br/>
-		I'm not best in databases, but I'm highly motivated and less experienced in developing server-side services such as <strong>RESTful APIs</strong> and <strong>CRUD operations</strong>.
-	</p>
-	<p>
-		I am not limited to these things! I am interested in much more technologies and programming languages.
+		I'm not best in databases, but I'm highly motivated and less experienced in developing server-side services such as <strong>RESTful APIs</strong> and <strong>CRUD operations</strong>. And I'm already made ORM with Laravel 5.
 	</p>
 	<p>
 		I know it will take long time, but one day I will become a web engineer!
