--- a/templates/tab-content/work.html
+++ b/templates/tab-content/work.html
@@ -27,7 +27,7 @@
 		<div class="col-sm-4 col-xs-12 link-wrapper">
 			<a href="http://linkedhouse-ifch0o1webapps.rhcloud.com" target="_blank" class="link-image row">
 				<img src="images/linkedhouse-prew.png" class="img-responsive col-xs-12 work-link-img">
-				<span class="link-image-text text-danger-light">The loading time may be slow.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="Because of the limitations for free accounts, the hosting service provider sometimes may stop the server which runs this application, so you may need to wait for starting the services. (~40 sec)"></span></span>
+				<span class="link-image-text text-danger-light">Redhat changed the infrastructure. The app is offline.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="Hosting company changed plan/payment/resource using infrastructure and my apps are down for now."></span></span>
 			</a>
 		</div>
 		<div class="col-sm-8 col-xs-12 resume-wrapper">
@@ -53,7 +53,7 @@
 		<div class="col-sm-4 col-xs-12 link-wrapper">
 			<a href="http://wcalc-ifch0o1webapps.rhcloud.com" target="_blank" class="link-image row">
 				<img src="images/wcalc-prew.png" class="img-responsive col-xs-12 work-link-img">
-				<span class="link-image-text text-danger-light">The loading time may be slow.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="Because of the limitations for free accounts, the hosting service provider sometimes may stop the server which runs this application, so you may need to wait for starting the services. (~40 sec)"></span></span>
+				<span class="link-image-text text-danger-light">Redhat changed the infrastructure. The app is offline.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="Hosting company changed plan/payment/resource using infrastructure and my apps are down for now."></span></span>
 			</a>
 		</div>
 		<div class="col-sm-8 col-xs-12 resume-wrapper">
