--- a/templates/tab-content/work.html
+++ b/templates/tab-content/work.html
@@ -1,6 +1,17 @@
 <div class="col-sm-10 col-sm-offset-1 row">
 	<div class="col-xs-12 text-center pad-top-40">
-		<h4>Here is some of my work</h4>
+		<h2>Here is some of my work</h2>
+	</div>
+	<div class="col-xs-12 row work-item-row">
+		<div class="col-sm-4 col-xs-12 link-wrapper">
+			<a href="http://zexplorer.tk" target="_blank" class="link-image row">
+				<img src="images/zexplorer-prew.png" class="img-responsive col-xs-12 work-link-img">
+				<span class="link-image-text text-danger-light">Uptime not guaranteed.<span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom" title="This web application is hosted on my personal PC. Uptime is not guaranteed"></span></span>
+			</a>
+		</div>
+		<div class="col-sm-8 col-xs-12 resume-wrapper">
+			<h3>Currently working at small company.</h3>
+		</div>	
 	</div>
 	<div class="col-xs-12 row work-item-row">
 		<div class="col-sm-4 col-xs-12 link-wrapper">
