--- a/templates/tab-content/contact.html
+++ b/templates/tab-content/contact.html
@@ -1,7 +1,7 @@
 <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
     <div class="row contact-row vertical-align">
         <div class="col-xs-4">
-            <a href="mailto:ifch0o69@gmail.com" target="_top" class="link-image">
+            <a href="mailto:ivo.h.tanev@gmail.com" target="_top" class="link-image">
                 <img class="responsive-img" src="/images/dev-logos/mail.png">
             </a>
         </div>
